# mosaic

./: .credo.exs  .dockerignore  .env.example  .gitignore  .mise.toml  .tool-versions  AGENT.md  Dockerfile  Dockerfile.cuda  Dockerfile.fixed  LICENSE  Makefile  OUTBOX-yas-mcp.md  PLAN.md  README.md  ROADMAP.md  docker-compose.cuda.yml  docker-compose.simple.yml  docker-compose.yml  docker-entrypoint.sh  mix.exs  nginx.conf  openapi.yaml  prometheus.yml  start_app.sh
argocd/: README.md  appset.yaml  mosaicdb.yaml
benches/: run.exs
charts/mosaicdb/: Chart.yaml  README.md  values.yaml
config/: config.exs  runtime.exs  test.exs
context/: goal0.txt  goal1.1.txt  goal1.txt  goal2.txt  goal3.1.txt  goal3.txt  goal4.txt  goal5.txt  refactor0.txt  refactor1.txt
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  FABRIC.md  FILES_GUIDE.md  QUICKSTART.md  README.simple.md  USAGE.md  example_load.iex  openapi.yaml
examples/: todo-react.html  todo-vanilla.html  todo-vue.html  todo.sexpr
k6_tests/: README.md  load_test.js
lib/mosaic/: a2a.ex  aggregator.ex  api.ex  application.ex  benchmarks.ex  bloom_filter.ex  bloom_filter_manager.ex  config.ex  (+37 more)
proto/: mosaic.proto
scripts/: backup.sh  benchmark_embeddings.sh  cleanup.sh  demo.exs  demo_data.json  deploy.sh  fix.sh  graph_report.exs  iex-docker.sh  index_codebase.exs  init.sh  more_demo.sh  mosaic_demo.sh  rag_demo.exs  reify_cmd.exs  search_demo.exs  setup.sh  traverse_demo.exs
sdks/python/: pyproject.toml
sdks/python/mosaicdb/: __init__.py
shared/: OUTBOX-weft.md  README.md
test/: test_helper.exs  tests.txt
(+169 files in other folders)
