[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mosaicdb"
version = "0.2.0"
description = "Python client for MosaicDB — Federated Semantic Search & Code Graph"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "MosaicDB Contributors"}
]
keywords = ["vector-search", "semantic-search", "graph-database", "rag", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.urls]
Homepage = "https://github.com/allen-munsch/mosaic"
Documentation = "https://github.com/allen-munsch/mosaic#readme"
Repository = "https://github.com/allen-munsch/mosaic"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
]
